Fix docker repository location

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ install: true
 before_script:
 - export DOCKER_HOST="$HOST_NAME"
 script:
-- docker build -t dto80/htmltest .
-- docker push dto80/htmltest
+- docker build -t tookaa2/htmltest .
+- docker push tookaa2/htmltest
 after_success:
-- docker run -p 8088:80 -d dto80/htmltest:latest
+- docker run -p 8088:80 -d tookaa2/htmltest:latest
 - ls -l
 - scp -i "se234.pem" -r html/* ubuntu@54.71.80.147:/var/www/html
 service: docker
